--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
   },
+  "engines": {
+    "node": ">=18.18.0"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
