--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,28 @@
 [build]
   command = "npm run build"
   publish = ".next"
+  ignore = "node_modules"
 
 [build.environment]
   NODE_VERSION = "20"
 
+# Handle Next.js routing properly
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/.netlify/functions/___netlify-handler"
   status = 200
 
 [functions]
   node_bundler = "esbuild"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Cache-Control = "no-cache, no-store, must-revalidate"
+    Pragma = "no-cache"
+    Expires = "0"
+
+[[headers]]
+  for = "/_next/static/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
